# NOAH

./: .gitignore  DATABASE_INTEGRATION_GUIDE.md  DATABASE_SETUP.md  DBEAVER_TO_STREAMLIT.md  DEPLOYMENT.md  Dockerfile  FREE_DATABASE_OPTIONS.md  FREE_DEPLOYMENT.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  QUICK_DEPLOY.md  README.md  RENT_BURDEN_SETUP.md  STREAMLIT_CLOUD_SETUP.md  STREAMLIT_SECRETS_TEMPLATE.toml  database_schema.sql  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  fly.toml  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  setup_github.md
.streamlit/: config.toml
backend/: api_router.py  config.py  data_pipeline.py  db.py  ingest_socrata.py  main.py  models.py  settings.py
backend/clients/: base.py  census_client.py  database_client.py  example_client.py  socrata_client.py
backend/migrations/: 001_create_housing_projects_table.sql
deploy/: railway.toml  streamlit.toml
frontend/: app.py  app_backup.py  app_new.py
frontend/data/: nyc_tracts.geojson
frontend/pages/: about.py  analysis.py  glossary.py  income_map.py  rent_burden.py  rent_burden_local.py
scripts/: README_check_completion_dates.md  build_zip_level_tables.py  check_completion_dates.py  check_database.py  create_zip_shapes_nyc.sql  db_client.py  download_nyc_geojson.py  import_csv_to_sqlite.py  init_database.py  run_data_pipeline.py  setup_database.py  start_local.py  test_database_integration.py  test_new_ui.py  test_socrata_token.py
