[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-housing-hub"
version = "1.0.0"
description = "NYC Housing Hub API"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0.post1",
    "httpx==0.25.2",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "python-multipart==0.0.20",
    "gunicorn==21.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
